syntax = "proto3";

// RPC message wrappers

message RPCRequest {
	string request_type = 1;
	string response_type = 2;
	string id = 3;
	bytes data = 4;
}

message RPCResponse {
	string id = 1;
	bytes data = 2;
}

// actual proto stuff

service DiscordAPI {
	rpc Greet(GreetRequest) returns (GreetResponse);
}

message GreetRequest {
	string greeting = 1;
}

message GreetResponse {
	string response = 1;
}